--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  background-color: black;
   color: white;
+  height: 100px;
+  box-shadow: 0px 5px 50px rgba(56, 215, 255, 0.3);
 }
 
-.App-link {
-  color: #61dafb;
+.header img {
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header h1 {
+  margin: auto;
+  /* position: absolute; */
+}
+
+.linkBox {
+  margin: auto 0;
+  
+}
+
+.linkBox a {
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  transition: color ease-in-out 0.5s;
+}
+
+.linkBox a:hover {
+  font-weight: bold;
+  color: rgb(56, 215, 255);
+}
+
+body {
+  background-image: url('./components/image/background-polygon-lightblue.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
